[package]
name = "qpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
futures-util = "0.3"
log = "0.4"
quinn = "0.9"
rcgen = { version = "0.10", features = ["x509-parser"] }
rustls = "0.20"
tokio = { version = "1", features = ["rt", "time", "macros", "io-util"] }

[dev-dependencies]
tempfile = "3"
