[package]
name = "qpiped"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
directories = "4"
env_logger = "0.9"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "time", "macros", "rt-multi-thread", "io-util"] }

qpipe = { path = "../qpipe" }
